// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Select /> > renders as expected based on provided props 1`] = `
<div>
  <select
    class="w-full rounded-md border appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat bg-position-[right_0.75rem_center] bg-size-[16px_12px] focus-ring border-lm-input-border dark:border-dm-input-border pl-3 py-1.5 bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;

exports[`<Select /> > renders as expected based on provided props 2`] = `
<div>
  <select
    class="w-full rounded-md border appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat bg-position-[right_0.75rem_center] bg-size-[16px_12px] focus-ring border-lm-input-border dark:border-dm-input-border pl-2 py-1 text-sm bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;

exports[`<Select /> > renders as expected based on provided props 3`] = `
<div>
  <select
    class="w-full rounded-md border appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat bg-position-[right_0.75rem_center] bg-size-[16px_12px] focus-ring border-lm-input-border dark:border-dm-input-border pl-3 py-1.5 bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;

exports[`<Select /> > renders as expected based on provided props 4`] = `
<div>
  <select
    class="w-full rounded-md border appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat bg-position-[right_0.75rem_center] bg-size-[16px_12px] focus-ring border-lm-input-border dark:border-dm-input-border pl-4 py-2 text-xl bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;

exports[`<Select /> > renders as expected based on provided props 5`] = `
<div>
  <select
    class="w-full rounded-md border appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat bg-position-[right_0.75rem_center] bg-size-[16px_12px] focus-ring-danger border-danger pl-3 py-1.5 bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;

exports[`<Select /> > renders as expected based on provided props 6`] = `
<div>
  <select
    class="w-full rounded-md border appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat bg-position-[right_0.75rem_center] bg-size-[16px_12px] focus-ring border-lm-input-border dark:border-dm-input-border pl-3 py-1.5 bg-lm-disabled-input dark:bg-dm-disabled-input"
    disabled=""
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;
